background styling changes

--- a/solution-challenge-team-finder-react/src/App.css
+++ b/solution-challenge-team-finder-react/src/App.css
@@ -8,7 +8,7 @@
   flex-direction: column;
   justify-content: space-between;
   padding: 2%;
-  background-color: #a5fba5;
+  background-color: #f7f7f7
 }
 
 .Title {
